--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>מערכת ניהול מלאי</title>
+    <meta name="google-site-verification" content="lolnSkqA79DekgnEA1HwWJYQ4uVFpiEQ-zUSWRwPwRk" />
   </head>
   <body>
     <noscript>אתר זה דורש JavaScript כדי לפעול.</noscript>
