--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="מערכת ניהול מלאי" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>מערכת ניהול מלאי</title>
+    <title>מצות אבהתנא</title>
     <meta name="google-site-verification" content="lolnSkqA79DekgnEA1HwWJYQ4uVFpiEQ-zUSWRwPwRk" />
   </head>
   <body>
